Implement business logic

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,20 +1,23 @@
-<div class="dx-fieldset-header">SearchBox</div>
-<div class="dx-field">
-  <div class="dx-field-label">Product</div>
-  <div class="dx-field-value">
-    <dx-select-box
-      #selectBox
-      [dataSource]="productsDataSource"
-      displayExpr="Name"
-      valueExpr="id"
-      [searchEnabled]="true"
-      [searchMode]="searchModeOption"
-      [searchExpr]="searchExprOption"
-      [searchTimeout]="searchTimeoutOption"
-      [acceptCustomValue]="true"
-      (onCustomItemCreating)="addCustomItem($event)"
-    >
-      ></dx-select-box
-    >
-  </div>
-</div>
+<dx-pivot-grid
+  [allowSortingBySummary]="true"
+  [allowSorting]="true"
+  [allowFiltering]="true"
+  [allowExpandAll]="true"
+  height="440"
+  [showBorders]="true"
+  [showColumnGrandTotals]="false"
+  [fieldChooser]="fieldChooser"
+  [dataSource]="dataSource"
+></dx-pivot-grid>
+
+<dx-chart
+  [commonSeriesSettings]="commonSeriesSettings"
+  [size]="size"
+  [adaptiveLayout]="adaptiveLayout"
+>
+  <dxo-tooltip
+    [enabled]="true"
+    format="currency"
+    [customizeTooltip]="customizeTooltip"
+  ></dxo-tooltip>
+</dx-chart>
